# strandsNlangGraph

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
agentcore/: agentcore.json
agentcore/cdk/: package-lock.json
common/: config.py  prompts.py  tools.py  types.py
deploy/: server.py
docs/superpowers/handovers/: 2026-07-07-unit-2-langgraph-handover.md  2026-07-08-unit-3-agentcore-handover.md
docs/superpowers/plans/: 2026-07-07-strands-research-assistant.md  2026-07-07-unit-2-api-notes.md  2026-07-07-unit-2-langgraph-research-assistant.md  2026-07-08-unit-3-agentcore-deploy.md
docs/superpowers/runbooks/: 2026-07-08-unit-3-agentcore-deploy-runbook.md
docs/superpowers/specs/: 2026-07-07-strands-research-assistant-design.md  2026-07-07-unit-2-langgraph-research-assistant-design.md  2026-07-08-unit-3-agentcore-deploy-design.md
langgraph_app/: basic.py  model.py  research.py  research_graph.py  run.py
strands_app/: basic.py  model.py  research.py  run.py
tests/: conftest.py  test_common_tools.py  test_config.py  test_deploy_server.py  test_langgraph_basic.py  test_langgraph_model.py  test_langgraph_research.py  test_langgraph_research_graph.py  test_langgraph_run.py  test_strands_basic.py  test_strands_model.py  test_strands_research.py  test_strands_run.py  test_types.py
