[project]
name = "strands-n-langgraph"
version = "0.1.0"
description = "Comparative learning repo: Strands vs LangGraph research assistant"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.8",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "strands-agents[gemini]>=1.45.0",
]

[dependency-groups]
deploy = [
    "aws-opentelemetry-distro>=0.18.0",
    "bedrock-agentcore>=1.17.0",
]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.uv]
package = false

[tool.pytest.ini_options]
markers = ["live: makes real Gemini API calls; skipped without GOOGLE_API_KEY"]

[tool.ruff]
line-length = 100
